name:                airtable-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ooblahman/airtable-api
license:             BSD3
license-file:        LICENSE
author:              Anand Srinivasan
maintainer:          anand@alphasheets.com
copyright:           AlphaSheets, Inc
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Airtable.Table
                     , Airtable.Query
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , wreq
                     , hashable
                     , lens
  default-language:    Haskell2010

test-suite airtable-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , airtable-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/airtable-api
